[workspace]
resolver = "2"
members = ["abe", "."]

[package]
name = "arithmetic-abe"
version = "0.1.0"
edition = "2024"

[dependencies]
mxx = { git = "https://github.com/MachinaIO/mxx.git" }
rand = { version = "0.9.0", features = ["std_rng"] }
num-bigint = { version = "0.4", features = ["serde"] }
thiserror = "2.0.16"
bigdecimal = { version = "0.4" }
rayon = "1.10"
log = "0.4"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "abort"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[dev-dependencies]
env_logger = "0.11"
