[package]
name = "abe"
version = "0.1.0"
edition = "2024"

[dependencies]
mxx = { git = "https://github.com/MachinaIO/mxx.git", branch = "feat/compatible-with-abe" }
arithmetic-abe = { path = "../" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
keccak-asm = { version = "0.1.4" }
num-bigint = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
